# pmos_nn

./: .gitignore  flowing_setup.py  pyproject.toml  readme.md
.github/workflows/: flowing-package-builder.yml
demo/net_generate/: NetInformation.py
demo/net_generate/mindspore_net/: NetGenerate.py
demo/net_generate/net/: NetGenerate.py
demo/net_generate/torch_net/: NetGenerate.py
demo/segment/: SegmentDemo.py
demo/segment/net/: DehazeNet.py  hNet.py
doc/help/: flowing-instruction.md
flowing/: __init__.py
flowing/builder/: Action.py  Args.py  Build.py  Transit.py  __init__.py  action.py  action_code.py  readme.md
flowing/builder/struct/: LossPair.py  __init__.py  loss_pair.py  model_pair.py
flowing/builder/torch/: Build.py  Transit.py  __init__.py  args.py
flowing/checker/: Classification.py  __init__.py  classification.py
flowing/config/: Mate.py  Package.py  __init__.py
flowing/dataset/: ImageDataset.py  __init__.py  image_dataset.py  link_dataset.py
flowing/dataset/torch/: __init__.py
flowing/helper/: Image.py  LearningRate.py  __init__.py
flowing/helper/torch/: Compile.py  Image.py  __init__.py  classification.py
flowing/net/: __init__.py  readme.md
flowing/net/abstract/: LayerNode.py  __init__.py  base.py  input_node.py  output_node.py
flowing/net/layer/: Layer.py  __init__.py  layer.py  layer_init_helper.py  obj.py  shape_helper.py  utils.py
flowing/net/parser/: Parser.py  TorchParser.py  __init__.py  mindspore_parser.py  parser.py  torch_parser.py
flowing/net/struct/: NodeDataPair.py  __init__.py
flowing/net/template/: Mate.py  MindSporeModuleClass.tmpl  TensorFlowModuleClass.tmpl  TorchModuleClass.tmpl  __init__.py
flowing/server/: common.py  config.py  expection.py  response.py  runner.py  server.py
flowing/shower/: Image.py  Logger.py  __init__.py
(+198 files in other folders)
