[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "flowing"
description = "PMoS-flowing"
authors = [
    { name = "PMoS" },
    { name = "0x4C48", email = "lohhhha@qq.com" },
]
requires-python = ">=3.12"
dependencies = [
    'torch',
    'torchvision',
    'tabulate',
    'tensorboard',
    'mpmath==1.3.0',
    'opencv-python',
    'matplotlib',
    'tqdm',
    'numpy',
    'fastapi',
    'uvicorn',
    'autopep8',
    'case-convert'
]
dynamic = ["version"]
license = "Apache-2.0"

[tool.setuptools]
include-package-data = true
packages = ["flowing"]

[tool.setuptools.package-data]
"flowing" = [
    # For readme
    "*.md",
    # For net template
    "net/template/*.tmpl",
    # For server public files
    "server/public/**/*"
]

[tool.setuptools.dynamic]
version = { attr = "flowing.config.Mate.VERSION" }